--- a/extract_chatbot-info_llm-part.ipynb
+++ b/extract_chatbot-info_llm-part.ipynb
@@ -43,7 +43,7 @@
         "from zipfile import ZipFile\n",
         "import os\n",
         "\n",
-        "genai.configure(api_key=\"AIzaSyB62lILNDleyZvjImtuW9DkXPIy9dNei2E\")\n",
+        "genai.configure(api_key=\"api_key\")\n",
         "model = genai.GenerativeModel(\"models/gemini-1.5-flash\")\n",
         "\n",
         "def extract_text_from_pdf(pdf_path):\n",
